@@ -412,7 +412,8 @@ static MidInstrument *load_instrument(MidSong *song, const char *name,
 	  sp->loop_start *= 2;
 	  sp->loop_end *= 2;
 	}
-#ifndef LITTLE_ENDIAN
+/*#ifndef LITTLE_ENDIAN*/
+#if BYTE_ORDER == BIG_ENDIAN
       else
 	/* convert to machine byte order */
 	{
